@startuml

class FactorGraph {
    +add_variable(Variable): Result<VariableId, GraphError>
    +add_factor(FactorKind): Result<FactorId, GraphError>
}

class VariableNode {
    +factor_ids(): &[FactorId]
}

class FactorNode {
    +variable_ids(): &[VariableId]
}

class Variable

enum FactorKind

class VariableId

class FactorId

FactorGraph o-- "0..*" VariableNode
FactorGraph o-- "0..*" FactorNode

VariableNode *-- "1" Variable
VariableNode ..> FactorId

FactorNode *-- "1" FactorKind
FactorNode ..> VariableId

@enduml